--- a/mysite/templates/posting/posting_list.html
+++ b/mysite/templates/posting/posting_list.html
@@ -118,7 +118,7 @@
     <!-- 페이징처리 끝 -->
 </div>
 
-<form id="searchForm" method="get" action="{% url 'posting:main' %}">
+<form id="searchForm" method="get" action="{% url 'posting:index' %}">
     <input type="hidden" id="kw" name="kw" value="{{ kw|default_if_none:'' }}">
     <input type="hidden" id="page" name="page" value="{{ page }}">
     <input type="hidden" id="so" name="so" value="{{ so }}">
