--- a/mysite/templates/navbar.html
+++ b/mysite/templates/navbar.html
@@ -24,7 +24,7 @@
                                     <a class="nav-link" href="{% url 'index' %}">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">Go Projects</a>
+                                    <a class="nav-link" href="{% url 'project:project_list' %}">Go Projects</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'posting:index' %}">게시판</a>
