--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -469,6 +469,12 @@ ul.email li i {
      padding: 40px;
      margin-bottom: 26px;
 }
+.project_box {
+     border: #e6e7e8 solid 1px;
+     transition: ease-in all 0.5s;
+     padding: 40px;
+     margin-bottom: 26px;
+}
 
 .we_box h3 {
      color: #292929;
@@ -1019,4 +1025,15 @@ ul.social_icon li a:hover {
 
 .inner_page .about {
      margin: 90px 0;
+}
+
+.project .read_more {
+
+     display: block;
+     background: #252525;
+     margin-top: 30px;
+}
+
+.project .read_more:hover {
+     background: #464646c7;
 }
