--- a/mysite/templates/common/login.html
+++ b/mysite/templates/common/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <div class="container">
+    <div class="container mb-lg-5 mt-lg-5">
         <div class="container my-3">
             <div class="row">
                 <div class="col-4">
@@ -13,7 +13,7 @@
             </span>
                 </div>
             </div>
-            <form method="post" class="post-form" action="{% url 'common:login' %}">
+            <form method="post" class="main_form" action="{% url 'common:login' %}">
                 {% csrf_token %}
                 <!-- 로그인 성공 후 이동되는 URL -->
                 <input type="hidden" name="next" value="{{ next }}">
@@ -28,7 +28,7 @@
                     <input type="password" class="form-control" name="password" id="password"
                            value="{{ form.password.value|default_if_none:'' }}">
                 </div>
-                <button type="submit" class="btn custom-btn bg-color mt-3 aos-init aos-animate">로그인</button>
+                <button type="submit" class="send_btn">로그인</button>
             </form>
         </div>
     </div>
