--- a/mysite/templates/navbar.html
+++ b/mysite/templates/navbar.html
@@ -30,7 +30,7 @@
                                     <a class="nav-link" href="{% url 'posting:index' %}">게시판</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="portfolio.html">Portfolio </a>
+                                    <a class="nav-link" href="{% url 'chat:chat-index' %}">회의실-임시 </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact Us</a>
