--- a/django-channels-example-main/chat/templates/room.html
+++ b/django-channels-example-main/chat/templates/room.html
@@ -1,5 +1,29 @@
-{% extends 'base.html' %}
-{% block content %}
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>django-channels-chat</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+    <style>
+        #chatLog {
+            height: 300px;
+            background-color: #FFFFFF;
+            resize: none;
+        }
+
+        #onlineUsersSelector {
+            height: 300px;
+        }
+
+        #chat_list {
+            text-align: left;
+
+        }
+    </style>
+</head>
+<body>
 <div class="container mt-3 p-5">
     <h2>django-channels-chat</h2>
     <div class="row">
@@ -29,4 +53,6 @@
     </div>
     {{ room.name|json_script:"roomName" }}
 </div>
-{% endblock %}
+<script src="{% static 'room.js' %}"></script>
+</body>
+</html>
