--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -48,6 +48,8 @@
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/jquery-3.0.0.min.js' %}"></script>
     <script src="{% static 'js/custom.js' %}"></script>
+    <script src="{% static 'js/room.js' %}"></script>
+    <script src="{% static 'js/index.js' %}"></script>
 
 
 {% endblock %}
