--- a/django-channels-example-main/templates/project/index.html
+++ b/django-channels-example-main/templates/project/index.html
@@ -21,7 +21,7 @@
 
         document.querySelector('#room-name-submit').onclick = function(e) {
             var roomName = document.querySelector('#room-name-input').value;
-            window.location.pathname = '/project/' + roomName + '/';
+            window.location.pathname = '/project/room/' + roomName + '/';
         };
     </script>
 </body>
