--- a/django-channels-example-main/templates/project/room.html
+++ b/django-channels-example-main/templates/project/room.html
@@ -18,7 +18,7 @@
 
     var chatSocket = new WebSocket(
         'ws://' + window.location.host +
-        '/ws/project/' + roomName + '/');
+        '/ws/project/room/' + roomName + '/');
 
     chatSocket.onmessage = function(e) {
         var data = JSON.parse(e.data);
