--- a/djanog/Django_Navernews-master/Django_Navernews-master/interface_prj/news/static/news/css/news.css
+++ b/djanog/Django_Navernews-master/Django_Navernews-master/interface_prj/news/static/news/css/news.css
@@ -1,7 +1,7 @@
 /* css selector */
 .page-header {
     /* background-color: #9999ff; */
-    background-image: url('img/galaxy.jpg');
+    background-image: url('galaxy.jpg');
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
