--- a/django-channels-example-main/templates/project/room.html
+++ b/django-channels-example-main/templates/project/room.html
@@ -7,10 +7,15 @@
 </head>
 
 <body>
-    <textarea id="chat-log" cols="100" rows="20"></textarea><br/>
-    <input id="chat-message-input" type="text" size="100"/><br/>
-    <input id="chat-message-submit" type="button" value="Send"/>
-    <button class="btn-custom", id="naver">네이버</button>
+<textarea id="chat-log" cols="100" rows="20"></textarea><br/>
+<input id="chat-message-input" type="text" size="100"/><br/>
+<input id="chat-message-submit" type="button" value="Send"/>
+{#<button class="btn-custom" , id="naver">네이버</button>#}
+
+<form action="#" method="get">
+    <button name="naver" value="click" class="waves-effect waves-light purple lighten-3 btn">네이버</button>
+</form>
+
 </body>
 
 <script>
@@ -20,40 +25,34 @@
         'ws://' + window.location.host +
         '/ws/project/room/' + roomName + '/');
 
-    chatSocket.onmessage = function(e) {
+    chatSocket.onmessage = function (e) {
         var data = JSON.parse(e.data);
         {#data['message']의 값이 받아오는 데이터값#}
-        var message = data['message_up'];
-        document.querySelector('#chat-log').value += (message +'\n');
+        var message = data['message'];
+        document.querySelector('#chat-log').value += (message + '\n');
     };
 
-    chatSocket.onclose = function(e) {
+    chatSocket.onclose = function (e) {
         console.error('Chat socket closed unexpectedly');
     };
 
     document.querySelector('#chat-message-input').focus();
-    document.querySelector('#chat-message-input').onkeyup = function(e) {
+    document.querySelector('#chat-message-input').onkeyup = function (e) {
         if (e.keyCode === 13) {  // enter, return
             document.querySelector('#chat-message-submit').click();
         }
     };
 
-    document.querySelector('#chat-message-submit').onclick = function(e) {
+    document.querySelector('#chat-message-submit').onclick = function (e) {
         var messageInputDom = document.querySelector('#chat-message-input');
         var message = messageInputDom.value;
         chatSocket.send(JSON.stringify({
-            'command': 'message',
-            'message_up': message
+            'message': message
         }));
 
         messageInputDom.value = '';
     };
-    document.querySelector('#naver').onclick = function(e) {
 
-        chatSocket.send(JSON.stringify({
-            'command': 'naver',
-        }));
-    };
 
 </script>
 
