--- a/django-channels-example-main/templates/project/room.html
+++ b/django-channels-example-main/templates/project/room.html
@@ -43,10 +43,12 @@
         }
     };
 
+
     document.querySelector('#chat-message-submit').onclick = function (e) {
         var messageInputDom = document.querySelector('#chat-message-input');
         var message = messageInputDom.value;
         chatSocket.send(JSON.stringify({
+            'command':'message',
             'message': message
         }));
 
