--- a/mysite/templates/navbar.html
+++ b/mysite/templates/navbar.html
@@ -24,7 +24,7 @@
                                     <a class="nav-link" href="{% url 'index' %}">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'project:project_list' %}">Go Projects</a>
+                                    <a class="nav-link" href="{% url 'project:project_index' %}">Go Projects</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'posting:index' %}">게시판</a>
@@ -33,7 +33,7 @@
                                     <a class="nav-link" href="{% url 'chat:chat-index' %}">회의실-임시 </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact Us</a>
+                                    <a class="nav-link" href="{% url 'test:index' %}">test</a>
                                 </li>
                             </ul>
                         </div>
